Changelog
=========

11.9.dev0 - (unreleased)
------------------------

11.8 - (2017-05-22)
-------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

11.7 - (2017-05-15)
-------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

11.6 - (2017-05-08)
-------------------
* Change: removed pdf.header title values if we print within collection.pdf.body
  since printing multiple pages will result in wrong title as soon as we print
  the next object
  [ichim-david refs #84084]

11.5 - (2017-04-24)
-------------------
* Change: updated package information
  [eduard-fironda]

11.4 - (2017-03-20)
-------------------
* Bug fix: fixed pdf.footer and pdf.header title enconding issues,
  when subpage has content that needed to be escaped
  [ichim-david refs #80861]

11.3 - (2017-01-17)
-------------------
* Bug fix: Remove hard dependency to CMFPlone introduced in v11.2
  [avoinea]

11.2 - (2017-01-17)
-------------------
* Feature: added internationalization on "Contents" appearing in PDF TOC
  [irina-botez]

11.1 - (2016-11-07)
-------------------
* Feature: Added pdf_custom_fixes to pdf.toc.pt in case this template would need
  custom css fixes
  [ichim-david refs #78802]

11.0 - (2016-10-14)
-------------------
* Change: changed styling of pdf.toc headers
  [ichim-david refs #77476]

10.9 - (2016-10-06)
-------------------
* Bug fix: Fixed regression bug introduced within version 10.8 about
  custom Content-Rules string substitions defined by this package.
  [voineali refs #77581]

10.8 - (2016-10-03)
-------------------
* Change: Use IContextWrapper from plone.stringinterp intead of custom one
  [avoinea]

10.7 - (2016-05-19)
-------------------
* Change: pylint fixes
  [ichim-david refs #71940]

10.6 - (2016-03-31)
-------------------
* Cleanup: Cleanup pdftk specific code
  [avoinea]
* Bug fix: Warn if EEACONVERTER_TEMP is not set and fallback to CLIENT_HOME/tmp
  instead of crashing entire application