@@ -44,7 +44,6 @@ setup(name=NAME,
           'PyPDF2',
           'Pillow',
           'Products.statusmessages',
-          'plone.stringinterp >= 1.0.14'
       ],
       extras_require={
           'test': [
